loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:3: error: '<-' expected but '=' found.
for (y=0 to 4) {
      ^LoopCourse:10: error: illegal start of simple expression
	}
        ^