loopfor.LoopCourse.scala.code
var x=0
var y=0
for (y=0 to 4) {
for(x<-0 to 8) { 
avance()
 }
gauche()
}